--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /Runtime/
 /Uploads/*
 /node_modules/
-/Public/css/
-/Public/js/
+/Public/css/*.css
+/Public/js/*.js
+!/Public/css/*.min.css
+!/Public/js/*.min.js
 !*.md
