优化：gitignore 删除：AdFloat插件

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,26 @@
 .idea
 *.log
+.gitignore
+
 /Runtime/
-/Uploads/*
+/Uploads/
 /node_modules/
+
+/Application/
+!/Application/Common/
+!/Application/Admin/
+!/Application/Home/
+!/Application/Install/
+
+/Addons/
+!/Addons/Email/
+!/Addons/ReturnTop/
+!/Addons/SyncLogin/
+
 /Public/css/*.css
 /Public/js/*.js
 !/Public/css/*.min.css
 !/Public/js/*.min.js
+
 !*.md
+!/.gitignore
